--- a/nginx_php/Vagrantfile
+++ b/nginx_php/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     t.vm.network :private_network, ip: "192.168.56.102"
     t.vm.provider "virtualbox" do |v|
       v.customize ["modifyvm", :id, "--memory", 512]
-      v.name = "ruby"
+      v.name = "docker_nginx_php"
     end
     # t.vm.synced_folder "share", "/vagrant_data"
     t.vm.provision :shell, :path => "./setup.sh"
