--- a/norikra/Vagrantfile
+++ b/norikra/Vagrantfile
@@ -21,8 +21,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     t.vm.hostname = "trusty"
     t.vm.network :private_network, ip: "192.168.56.104"
     t.vm.provider "virtualbox" do |v|
-      v.customize ["modifyvm", :id, "--memory", 512]
-      v.name = "docker_td"
+      v.customize ["modifyvm", :id, "--memory", 2048]
+      v.name = "docker_norikra"
     end
     # t.vm.synced_folder "share", "/vagrant_data"
     t.vm.provision :shell, :path => "./setup.sh"
