--- a/nginx_php/Vagrantfile
+++ b/nginx_php/Vagrantfile
@@ -12,6 +12,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "trusty"
 
+  if Vagrant.has_plugin?("vagrant-cachier")
+    config.cache.scope = :box
+  end
+
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
   config.vm.box_url = "/Users/sgyk/local/vagrant/box/trusty-trusty-server-cloudimg-amd64-vagrant-disk1.box"
