add timezone setting

--- a/base_ubuntu/docker/Dockerfile
+++ b/base_ubuntu/docker/Dockerfile
@@ -18,6 +18,8 @@ COPY etc/initscript /etc/initscript
 
 #
 RUN echo "nameserver 8.8.8.8" >> /etc/resolvconf/resolv.conf.d/base \
+    && echo "UTC" | sudo tee /etc/timezone \
+    && dpkg-reconfigure --frontend noninteractive tzdata \
     && apt-get -qq update && apt-get -qq -y upgrade \
     && apt-get autoremove \
     && apt-get autoclean \
